<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">连连看</string>

  <string name="register">注册</string>

  <string name="start">开始游戏</string>
  <string name="setting">游戏设置</string>
  <string name="about_us">关于游戏</string>
  <string name="about_game">关于我们</string>
  <string name="exit">退出游戏</string>
  <string name="back">返回</string>

  <string name="back_ground">背景音乐</string>
  <string name="off">关</string>
  <string name="on">开</string>
  <string name="vibration">震动</string>
  <string name="language">语言</string>
  <string name="music_library">曲库</string>
  <string name="reset">恢复默认</string>
  <string name="back_main">返回主页面</string>
  <string name="about_game_text_start">如何开始</string>
  <string name="about_game_text_function">操作方法</string>
  <string name="about_game_text_text_one">加载游戏后，点击“开始游戏-选择关卡”即可进入游戏</string>
  <string name="about_game_text_text_two">
手指操作，将图案相同的两张图片用三根以内的直线连接在一起即可消除
游戏目标
在有限的时间里将图片全部消除即完成游戏目标
一共十个关卡，必须完成一个关卡之后才能解锁下一关卡</string>
  <string name="level">关卡</string>
  <string name="restart">重新开始</string>
  <string name="pause">暂停</string>
  <string name="resume">继续</string>
  <string name="switch_music">切换音乐</string>
  <string name="back_level">返回关卡选择</string>
  <string name="add_music">添加音乐</string>
  <string name="about_us_text">这是一个免费的，供大家娱乐消遣的小游戏。
和其他大型手游相比，它简单易懂，操作方便，且不需要花费大量的时间精力。
希望玩家能在连连看这个小游戏中有一个愉快的体验</string>

  <string name="success_one">少侠只用了</string>
  <string name="success_two">秒就通关了</string>
  <string name="next_level">下一关</string>
  <string name="failure">少侠不要灰心，继续努力！</string>
  <string name="empty_input">用户名或密码不能为空</string>
  <string name="pass_error">密码错误</string>
  <string name="login_success">登录成功</string>
  <string name="empty_info">信息不能为空</string>
  <string name="pass_not">两次密码不一致</string>
  <string name="register_success">注册成功</string>
  <string name="num">账号</string>
  <string name="num_hint">请输入账号</string>
  <string name="pass">密码</string>
  <string name="pass_hint">请输入密码</string>
  <string name="again_pass">确认密码</string>
  <string name="again_pass_hint">请再次输入密码</string>
  <string name="remember_pass">记住密码</string>
  <string name="go_register">立即注册</string>
  <string name="login">登陆</string>
  <string name="ban_play">此关卡未开通，继续努力吧！</string>
</resources>
