<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:background="@mipmap/main"
  android:layout_height="match_parent"
  android:orientation="vertical">

  <ImageView
    android:id="@+id/Activity_Login_Img"
    android:layout_width="100dp"
    android:layout_height="100dp"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="50dp"
    android:src="@mipmap/ic_launcher" />

  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/Activity_Login_Img"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="5dp"
    android:text="@string/app_name"
    android:textSize="20sp" />

  <LinearLayout
    android:id="@+id/Activity_Login_Lin1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:orientation="horizontal">

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginLeft="10dp"
      android:padding="5dp"
      android:text="@string/num"
      android:textColor="#000000"
      android:textSize="15sp" />

    <EditText
      android:id="@+id/Activity_Login_Number"
      android:layout_width="0dip"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:hint="@string/num_hint"
      android:inputType="number" />
  </LinearLayout>

  <LinearLayout
    android:id="@+id/Activity_Login_Lin2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/Activity_Login_Lin1"
    android:layout_centerInParent="true"
    android:orientation="horizontal">

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginLeft="10dp"
      android:padding="5dp"
      android:text="@string/pass"
      android:textColor="#000000"
      android:textSize="15sp" />

    <EditText
      android:id="@+id/Activity_Login_Password"
      android:layout_width="0dip"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:hint="@string/pass_hint"
      android:inputType="textPassword" />
  </LinearLayout>

  <CheckBox
    android:id="@+id/Activity_Login_Chk"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/Activity_Login_Lin2"
    android:layout_marginLeft="20dp"
    android:layout_marginTop="5dp"
    android:checked="true"
    android:text="@string/remember_pass" />

  <TextView
    android:id="@+id/register"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/Activity_Login_Lin2"
    android:layout_alignParentRight="true"
    android:layout_marginTop="5dp"
    android:layout_marginRight="15dp"
    android:text="@string/go_register" />

  <Button
    android:id="@+id/Activity_Login_Login"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/Activity_Login_Chk"
    android:layout_marginLeft="60dp"
    android:layout_marginTop="40dp"
    android:layout_marginRight="60dp"
    android:text="@string/login"
    android:textColor="#000"
    android:textSize="20sp" />
</RelativeLayout>
