<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@mipmap/main"
  android:orientation="vertical">

  <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:background="#2595e4">

    <ImageView
      android:id="@+id/Setting_Img"
      android:layout_width="wrap_content"
      android:layout_height="match_parent"
      android:paddingLeft="15dp"
      android:paddingRight="15dp"
      android:src="@mipmap/rg_return" />

    <TextView
      android:id="@+id/Setting_TV"
      android:layout_width="wrap_content"
      android:layout_height="match_parent"
      android:layout_centerInParent="true"
      android:gravity="center"
      android:text="@string/register"
      android:textColor="#fff"
      android:textSize="20sp" />
  </RelativeLayout>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="30dp"
    android:orientation="horizontal">

    <TextView
      android:layout_width="0dip"
      android:layout_height="wrap_content"
      android:layout_marginStart="10dp"
      android:layout_weight="1.5"
      android:gravity="center"
      android:padding="5dp"
      android:text="@string/num"
      android:textColor="#000000"
      android:textSize="15sp" />

    <EditText
      android:id="@+id/Activity_Regi_Phone"
      android:layout_width="0dip"
      android:layout_height="wrap_content"
      android:layout_weight="4"
      android:hint="@string/num_hint"
      android:inputType="number" />
  </LinearLayout>

  <LinearLayout
    android:id="@+id/lin1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:orientation="horizontal">

    <TextView
      android:layout_width="0dip"
      android:layout_height="wrap_content"
      android:layout_marginLeft="10dp"
      android:layout_weight="1.5"
      android:gravity="center"
      android:padding="5dp"
      android:text="@string/pass"
      android:textColor="#000000"
      android:textSize="15sp" />

    <EditText
      android:id="@+id/Activity_Regi_Pass"
      android:layout_width="0dip"
      android:layout_height="wrap_content"
      android:layout_weight="4"
      android:hint="@string/pass_hint"
      android:inputType="textPassword" />
  </LinearLayout>

  <LinearLayout
    android:id="@+id/lin2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:orientation="horizontal">

    <TextView
      android:layout_width="0dip"
      android:layout_height="wrap_content"
      android:layout_marginLeft="10dp"
      android:layout_weight="1.5"
      android:gravity="center"
      android:padding="5dp"
      android:text="@string/again_pass"
      android:textColor="#000000"
      android:textSize="15sp" />

    <EditText
      android:id="@+id/Activity_Regi_AgainPass"
      android:layout_width="0dip"
      android:layout_height="wrap_content"
      android:layout_weight="4"
      android:hint="@string/again_pass_hint"
      android:inputType="textPassword" />
  </LinearLayout>

  <Button
    android:id="@+id/Activity_Regi_regi"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginTop="50dp"
    android:text="@string/register"
    android:textColor="#000"
    android:textSize="20sp" />
</LinearLayout>
