<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/main"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/Main_Start"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="200dp"
        android:layout_marginRight="100dp"
        android:background="@drawable/main_btn"
        android:gravity="center"
        android:text="@string/start"
        android:textColor="#fff"
        android:textSize="20sp" />


    <TextView
        android:id="@+id/Main_Setting"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="100dp"
        android:background="@drawable/main_btn"
        android:gravity="center"
        android:text="@string/setting"
        android:textColor="#fff"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/Main_AboutGame"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="100dp"
        android:background="@drawable/main_btn"
        android:gravity="center"
        android:text="@string/about_game"
        android:textColor="#fff"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/Main_AboutMe"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="100dp"
        android:background="@drawable/main_btn"
        android:gravity="center"
        android:text="@string/about_us"
        android:textColor="#fff"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/Main_Exit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="100dp"
        android:background="@drawable/main_btn"
        android:gravity="center"
        android:text="@string/exit"
        android:textColor="#fff"
        android:textSize="20sp" />
</LinearLayout>
