<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  tools:context=".MainActivity">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center_vertical"
      android:layout_marginStart="15dp"
      android:text="@string/level"
      android:textColor="#333"
      android:textSize="20sp" />

    <TextView
      android:id="@+id/Game_Level"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center_vertical"
      android:layout_marginStart="5dp"
      android:text="1"
      android:textColor="#333"
      android:textSize="20sp" />

    <TextView
      android:id="@+id/Game_Time"
      android:layout_width="0dip"
      android:layout_height="wrap_content"
      android:layout_marginRight="30dp"
      android:layout_weight="1"
      android:gravity="right"
      android:padding="10dp"
      android:textColor="#333"
      android:textSize="40sp" />
  </LinearLayout>

  <com.example.myapplication.game.GameView
    android:id="@+id/Game_View"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="30dp"
    android:background="@mipmap/game" />


  <TextView
    android:id="@+id/Game_ReStart"
    android:layout_width="match_parent"
    android:layout_height="30dp"
    android:layout_marginLeft="100dp"
    android:layout_marginTop="30dp"
    android:layout_marginRight="100dp"
    android:background="@drawable/main_btn"
    android:gravity="center"
    android:text="@string/restart"
    android:textColor="#fff"
    android:textSize="15sp" />

  <TextView
    android:id="@+id/Game_stop"
    android:layout_width="match_parent"
    android:layout_height="30dp"
    android:layout_marginLeft="100dp"
    android:layout_marginTop="10dp"
    android:layout_marginRight="100dp"
    android:background="@drawable/main_btn"
    android:gravity="center"
    android:text="@string/pause"
    android:textColor="#fff"
    android:textSize="15sp" />

  <TextView
    android:id="@+id/Game_SwitchMusic"
    android:layout_width="match_parent"
    android:layout_height="30dp"
    android:layout_marginLeft="100dp"
    android:layout_marginTop="10dp"
    android:layout_marginRight="100dp"
    android:background="@drawable/main_btn"
    android:gravity="center"
    android:text="@string/switch_music"
    android:textColor="#fff"
    android:textSize="15sp" />

  <TextView
    android:id="@+id/Game_goMain"
    android:layout_width="match_parent"
    android:layout_height="30dp"
    android:layout_marginLeft="100dp"
    android:layout_marginTop="10dp"
    android:layout_marginRight="100dp"
    android:background="@drawable/main_btn"
    android:gravity="center"
    android:text="@string/back_main"
    android:textColor="#fff"
    android:textSize="15sp" />

  <TextView
    android:id="@+id/Game_Back"
    android:layout_width="match_parent"
    android:layout_height="30dp"
    android:layout_marginLeft="100dp"
    android:layout_marginTop="10dp"
    android:layout_marginRight="100dp"
    android:background="@drawable/main_btn"
    android:gravity="center"
    android:text="@string/back_level"
    android:textColor="#fff"
    android:textSize="15sp" />

</LinearLayout>
